Update 7.05 Apply resource protection.md

--- a/DOMAIN7: Security Operations/7.05 Apply resource protection.md
+++ b/DOMAIN7: Security Operations/7.05 Apply resource protection.md
@@ -93,4 +93,20 @@ A single weak point in this cycle — especially during transport, reuse, or dis
 
 Imagine sending your laptop by mail across country borders — would you do it without tracking, a password, or encryption? Unfortunately, many organizations still do. When physical media is moved between secure environments, it’s particularly vulnerable. There's no firewall around a FedEx truck.
 
+Effective transport requires:
+- Chain of custody: Keep a documented log of who handled the media, when, and where.
+- Tamper-evident packaging: If a drive is intercepted, it should be obvious.
+- Encryption: Treat data on transportable media as though it's already been lost — encrypt it before it leaves.
+
+Many believe deleting a file makes it disappear. But deleted files are just pointers removed from a table — the data can still sit intact on the disk. Forensics teams — and attackers — can easily retrieve it.
+
+Methods of Sanitization are among others:
+- Clearing: Overwriting data with random characters — good for internal reuse when data isn’t highly sensitive.
+- Purging: More intensive, such as multi-pass overwrites or degaussing magnetic media.
+- Destruction: Physical obliteration — crushing, shredding, incinerating — used when the media leaves your control or held highly classified data.
+
+
+
+Imagine sending your laptop by mail across country borders — would you do it without tracking, a password, or encryption? Unfortunately, many organizations still do. When physical media is moved between secure environments, it’s particularly vulnerable. There's no firewall around a FedEx truck.
+
 
