Update 7.05 Apply resource protection.md

--- a/DOMAIN7: Security Operations/7.05 Apply resource protection.md
+++ b/DOMAIN7: Security Operations/7.05 Apply resource protection.md
@@ -105,8 +105,8 @@ Methods of Sanitization are among others:
 - Purging: More intensive, such as multi-pass overwrites or degaussing magnetic media.
 - Destruction: Physical obliteration — crushing, shredding, incinerating — used when the media leaves your control or held highly classified data.
 
+Sanitization must be fit-for-purpose. You wouldn't use a dry erase marker to redact a permanent marker — and the same logic applies to storage. The method must match the sensitivity and media type.
 
 
-Imagine sending your laptop by mail across country borders — would you do it without tracking, a password, or encryption? Unfortunately, many organizations still do. When physical media is moved between secure environments, it’s particularly vulnerable. There's no firewall around a FedEx truck.
 
 
