Update 7.05 Apply resource protection.md

--- a/DOMAIN7: Security Operations/7.05 Apply resource protection.md
+++ b/DOMAIN7: Security Operations/7.05 Apply resource protection.md
@@ -107,6 +107,114 @@ Methods of Sanitization are among others:
 
 Sanitization must be fit-for-purpose. You wouldn't use a dry erase marker to redact a permanent marker — and the same logic applies to storage. The method must match the sensitivity and media type.
 
+:link: Use [NIST 800-88 Revision 1](https://csrc.nist.gov/pubs/sp/800/88/r1/final) as your go-to guide for recommended sanitization methods
+
+Disposal is the final act of the media lifecycle — and if done wrong, it’s the one that can haunt you forever.
+
+Secure disposal requires:
+- Final sanitization (or direct destruction)
+- Documentation and approval
+- Destruction certificates (for third-party vendors)
+- Auditing of disposal practices
+
+:necktie: Media must be treated as classified until proven safe — no exceptions. If you wouldn't toss your company’s financial records in a public trash can, you shouldn't do it with an old drive either.
+
+USB drives, SD cards, and external hard disks have revolutionized mobility. But they’ve also become a nightmare for data leakage.
+
+These devices are:
+- Small enough to be lost easily
+- Often unencrypted
+- Frequently used in unmanaged, bring-your-own-device (BYOD) environments
+
+For example, Edward Snowden reportedly used a USB drive to smuggle classified NSA documents — an action made easier by a lack of portable media control.
+
+As a security professional, you should:
+- Disable USB ports or restrict their use via group policy
+- Mandate encryption for all flash drives
+- Use Data Loss Prevention (DLP) software to monitor file transfers
+
+These devices are like thumb-sized vaults — and they need controls accordingly.
+
+### Open Questions ###
+
+1. Why is encryption considered essential when transporting removable media containing sensitive information?
+
+<details> <summary>Show answer</summary> Encryption protects data from unauthorized access if media is lost or intercepted during transit. Even if the physical device is compromised, encryption ensures that the contents remain unreadable without the proper decryption keys. </details>
+
+2. What are the primary differences between clearing, purging, and destruction in media sanitization, and when should each be used?
+
+<details> <summary>Show answer</summary> Clearing prepares media for reuse within a trusted environment by overwriting data with non-sensitive information. Purging goes further, removing data to prevent recovery even with advanced forensic tools. Destruction physically renders the media unusable, ensuring data is permanently unrecoverable. Each method is chosen based on the sensitivity of the data and the risk of recovery. </details>
+
+3. How can poor disposal practices of outdated digital devices lead to data breaches, and what steps can be taken to prevent this?
+
+<details> <summary>Show answer</summary> If devices are not properly sanitized before disposal, residual data may be accessed by unauthorized individuals, leading to breaches of sensitive or regulated information. Preventive steps include secure wiping, degaussing magnetic media, and physical destruction such as shredding or incineration. </details>
+
+4. Why are USB flash drives and mobile devices considered high-risk media types, and what controls should be in place to mitigate these risks?
+
+<details> <summary>Show answer</summary> Their portability, lack of built-in encryption, and high likelihood of being lost or stolen make USB drives and mobile devices particularly risky. Mitigation controls include mandatory encryption, strict device control policies, Mobile Device Management (MDM) solutions, and user awareness training to minimize unsafe practices. </details>
+
+5. Explain the stages of the media lifecycle and how security considerations must be applied at each stage to maintain confidentiality and integrity.
+
+<details> <summary>Show answer</summary> The media lifecycle includes creation, use, storage, transport, reuse/sanitization, and disposal. Security considerations at each stage include applying access control, classification labeling, encryption during transport, regular sanitization before reuse, and secure destruction at end-of-life. Applying safeguards consistently ensures both confidentiality and integrity of data throughout its lifecycle. </details>
+
+---
+
+## 7.5.3 Data at rest/data in transit ##
+
+**Data at rest** refers to data that is stored on persistent media and not actively moving through networks. Think of documents saved on hard drives, databases sitting in cloud storage, or archived emails on a file server. This state may seem secure—it’s not flying through the internet—but it's a prime target for attackers. Why? Because it often contains the organization's crown jewels: intellectual property, customer databases, financial records, and more. If compromised, the consequences can be catastrophic.
+
+Consider an attacker who gains unauthorized access to an unencrypted backup server. That attacker could walk away with terabytes of sensitive data without ever triggering a network alarm.
+
+How Is It Protected? We don’t guard static data with a padlock—we use encryption, access controls, and physical safeguards.
+- Full Disk Encryption (FDE) ensures that even if a device is stolen, the data is unreadable without the key.
+- File-level encryption adds granularity—specific files remain protected even if copied.
+- Role-Based Access Control (RBAC) helps limit access to only those who truly need it.
+
+One subtle but powerful method? Data classification. Labeling data by sensitivity helps prioritize protection. You wouldn't leave your passport in the glovebox, right? Likewise, you shouldn't leave customer SSNs in unclassified file shares.
+
+**Data in transit (or data in motion)** is any data actively moving between devices, locations, or applications—like an email being sent, a database query crossing the network, or a video call streaming live content. This is when data is most exposed. Like a message in a bottle crossing the sea, data can be intercepted, modified, or impersonated if not properly protected.
+
+Think about using free airport Wi-Fi. You log into your company’s webmail. If the site isn't using HTTPS, someone running a packet sniffer nearby might capture your credentials. One careless connection could lead to a full-scale breach.
+Even more frightening? Attackers may perform man-in-the-middle (MitM) attacks, impersonating services and intercepting data silently.
+We use a combination of encryption protocols and validation mechanisms to secure data in motion, for example:
+
+- Transport Layer Security (TLS) is the modern standard for encrypting internet traffic. It ensures both confidentiality and authenticity.
+- Virtual Private Networks (VPNs) create secure tunnels for traffic to move across untrusted networks.
+- IPSec can secure data at the network layer, offering robust options for site-to-site or end-to-end encryption.
+- Mutual authentication, digital certificates, and session key management ensure the identity of communication endpoints.
+
+:bulb:  It’s not just about external communication. Even internal network traffic should be encrypted—think east-west traffic in a data center. Why? Because perimeter-only security is obsolete in a post-zero-trust world.
+
+:brain: Let’s borrow an analogy from air travel. Think of your data as a passenger.
+At rest = Passenger at the airport lounge. Comfortable, but still needs boarding pass checks and security.
+In transit = Passenger mid-flight. At high risk unless strapped in with safety features and monitored closely.
+As a security professional, your job is to secure both the lounge and the aircraft, ensuring the data has a safe journey from origin to destination—and remains protected even if the plane is grounded.
+
+### Open Questions ###
+
+1. Why is data in transit generally considered more vulnerable than data at rest, and what types of attacks typically target it?
+
+<details> <summary>Show answer</summary> Data in transit is more exposed because it travels across potentially insecure networks where attackers can intercept it. Common attack techniques include man-in-the-middle (MitM) attacks, packet sniffing, and session hijacking. These methods exploit the fact that data may pass through multiple devices and networks outside of organizational control. </details>
+
+2. How does full disk encryption help protect data at rest, and what are its limitations in a real-world scenario?
+
+<details> <summary>Show answer</summary> Full disk encryption protects data at rest by encrypting all the contents of a storage device, preventing unauthorized access if the device is lost or stolen. However, its limitations include ineffectiveness when the system is already powered on and compromised, or if attackers gain valid user credentials. It is a strong layer of defense but not a complete solution on its own. </details>
+
+3. In a zero-trust network model, how should internal data in transit be treated differently compared to traditional network security approaches?
+
+<details> <summary>Show answer</summary> In a zero-trust model, all internal data in transit is treated as untrusted and must be both encrypted and authenticated. Unlike traditional models that assume internal networks are inherently safe, zero trust applies continuous verification and protection, minimizing risks from insider threats and lateral movement. </details>
+
+4. What role does proper key management play in ensuring the effectiveness of both at-rest and in-transit encryption?
+
+<details> <summary>Show answer</summary> Proper key management is essential to the effectiveness of encryption because it ensures that keys are securely generated, stored, rotated, and destroyed. Without robust key practices, even strong encryption algorithms can be undermined, making data vulnerable to compromise through stolen or mismanaged keys. </details>
+
+5. Can you describe a real-world incident where failure to protect data in transit led to a security breach, and what could have prevented it?
+
+<details> <summary>Show answer</summary> In the 2013 Target breach, attackers intercepted unencrypted internal network traffic, which allowed them to move laterally and access sensitive customer data. Strong encryption of internal communications, combined with network segmentation, could have prevented the attackers from capturing and exploiting this information. </details>
+
+---
+
+
 
 
 
